R Corp Rodion + typos vari

--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -8,7 +8,7 @@
     {
       "id": 604,
       "name": "Pacchetto Fornitura Stagione 6",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per Addestramento Identità IV x60\n· Biglietto per Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x60\n· Biglietto per l'Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 425,
@@ -18,32 +18,32 @@
     {
       "id": 426,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Ramo Si Rodion & Gregor」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità x 30"
     },
     {
       "id": 154,
       "name": "Pacchetto ESP Settimanale",
-      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
+      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x35\n· Biglietto per l'Addestramento Identità III x25"
     },
     {
       "id": 155,
       "name": "Pacchetto ESP Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x80\n· Biglietto per Addestramento Identità III x70"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x80\n· Biglietto per l'Addestramento Identità III x70"
     },
     {
       "id": 156,
       "name": "Pacchetto ESP Mensile II",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x160\n· Biglietto per Addestramento Identità III x95"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x160\n· Biglietto per l'Addestramento Identità III x95"
     },
     {
       "id": 157,
       "name": "Pacchetto ESP Mensile III",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x325\n· Biglietto per Addestramento Identità III x165"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x325\n· Biglietto per l'Addestramento Identità III x165"
     },
     {
       "id": 107,
       "name": "Pacchetto Allenamento Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n·Biglietto per Addestramento Identità IV x35\n· Biglietto per Addestramento Identità III x25"
+      "desc": "Un'offerta mensile che offre i seguenti articoli\n\n· Follia x1690\n· Biglietto per Decaestrazione x2\n· Biglietto per l'Addestramento Identità IV x35\n· Biglietto per l'Addestramento Identità III x25"
     },
     {
       "id": 427,
@@ -53,7 +53,7 @@
     {
       "id": 428,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Eccelsa del Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Eccelsa del Ramo Mao Faust」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 429,
@@ -63,7 +63,7 @@
     {
       "id": 430,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Family Hierarch Candidate Ishmael」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Family Hierarch Candidate Ishmael」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 431,
@@ -73,17 +73,17 @@
     {
       "id": 432,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Capo IIII Meursault & Soldato II Sinclair Del Pollice Est」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Capo IIII Meursault & Soldato II Sinclair Del Pollice Est」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 433,
       "name": "Pacchetto Estrazione Mirata",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - E.G.O della N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - E.G.O della N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 434,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - E.G.O della N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - E.G.O della N Corp.::Proiettile Crudele Yi Sang」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 435,
@@ -93,7 +93,7 @@
     {
       "id": 436,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Sesta Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Sesta Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 437,
@@ -108,7 +108,7 @@
     {
       "id": 439,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Tempo Ammazzatempo BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· BBiglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 440,
@@ -123,7 +123,7 @@
     {
       "id": 442,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Il Lord di Hongyuan Hong Lu」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Il Lord di Hongyuan Hong Lu」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 443,
@@ -133,7 +133,7 @@
     {
       "id": 444,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Intervallo VI: Cultura Primaverile」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Intervallo VI: Cultura Primaverile」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 445,
@@ -143,7 +143,7 @@
     {
       "id": 446,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: E.G.O della N Corp.::Disprezzo, Timore Ryōshū」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata: E.G.O della N Corp.::Disprezzo, Timore Ryōshū」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 447,
@@ -183,7 +183,7 @@
     {
       "id": 450,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Faust Shi Est Sezione 3」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Faust Shi Est Sezione 3」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 451,
@@ -193,7 +193,7 @@
     {
       "id": 452,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Assassinio sul WARP Express BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Assassinio sul WARP Express BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 453,
@@ -203,7 +203,7 @@
     {
       "id": 454,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Settima Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Settima Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 455,
@@ -213,7 +213,7 @@
     {
       "id": 456,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Eccelso del Ramo You Heathcliff & Ramo Wei Don Quixote」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Branco Heishou - Eccelso del Ramo You Heathcliff & Ramo Wei Don Quixote」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 457,
@@ -223,12 +223,12 @@
     {
       "id": 458,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Lama Vagabonda di Hongyuan Ryōshū」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Lama Vagabonda di Hongyuan Ryōshū」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     },
     {
       "id": 459,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「New Target Extraction - R Corp. 4th Pack Reindeer Rodion」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「New Target Extraction - R Corp. 4th Pack Reindeer Rodion」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 60\n· Biglietto per l'Addestramento Identità III x 30"
     }
   ]
 }
