--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -78,7 +78,7 @@
     {
       "id": 102,
       "name": "Pacchetto Allenamento Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x1690\n· Biglietto per Decaestrazione x2\n· Biglietto di Aumento Livello II x1\n· Biglietto di Aumento Livello I x2\n· Biglietto per Addestramento Identità III x10\n· Biglietto per Addestramento Identità II x30"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x1690\n· Biglietto per Decaestrazione x2\n· Biglietto di Aumento Livello II x1\n· Biglietto di Aumento Livello I x2\n· Biglietto per l'Addestramento Identità III x10\n· Biglietto per l'Addestramento Identità II x30"
     },
     {
       "id": 103,
@@ -88,7 +88,7 @@
     {
       "id": 104,
       "name": "Pacchetto ESP Mensile",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x2\n· Biglietto per Addestramento Identità IV x20\n· Biglietto per Addestramento Identità III x20"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x2\n· Biglietto per l'Addestramento Identità IV x20\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 105,
@@ -103,17 +103,17 @@
     {
       "id": 121,
       "name": "Pacchetto Fornitura Stagione 1",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 1. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per Addestramento Identità II x40\n· Filo x80\n· [Stagione 1] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 1. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità II x40\n· Filo x80\n· [Stagione 1] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 122,
       "name": "Pacchetto Fornitura Stagione 2",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 2. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per Addestramento Identità III x30\n· Filo x80\n· [Stagione 2] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 2. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 2] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 123,
       "name": "Pacchetto Fornitura Stagione 3",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 3. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per Addestramento Identità III x30\n· Filo x80\n· [Stagione 3] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 3. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 3] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 131,
@@ -133,7 +133,7 @@
     {
       "id": 135,
       "name": "Pacchetto ESP Settimanale",
-      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello III x1\n· Biglietto per Addestramento Identità IV x12\n· Biglietto per Addestramento Identità III x20"
+      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità IV x12\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 136,
@@ -158,17 +158,17 @@
     {
       "id": 144,
       "name": "Pacchetto ESP Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x2\n· Biglietto per Addestramento Identità IV x20\n· Biglietto per Addestramento Identità III x20"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x2\n· Biglietto per l'Addestramento Identità IV x20\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 145,
       "name": "Pacchetto ESP Mensile II",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x4\n· Biglietto per Addestramento Identità IV x20\n· Biglietto per Addestramento Identità III x20"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x4\n· Biglietto per l'Addestramento Identità IV x20\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 146,
       "name": "Pacchetto ESP Mensile III",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x8\n· Biglietto per Addestramento Identità IV x40\n· Biglietto per Addestramento Identità III x40"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto di Aumento Livello IV x8\n· Biglietto per l'Addestramento Identità IV x40\n· Biglietto per l'Addestramento Identità III x40"
     },
     {
       "id": 147,
@@ -203,32 +203,32 @@
     {
       "id": 125,
       "name": "Pacchetto Fornitura Stagione 4",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 4. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per Addestramento Identità III x30\n· Filo x80\n· [Stagione 4] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 4. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 4] Cassa di ScheggieEgo A Scelta x40"
     },
     {
       "id": 150,
       "name": "Pacchetto ESP Settimanale",
-      "desc": "Un'offerta settimanale cheoffre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x25\n· Biglietto per Addestramento Identità III x18"
+      "desc": "Un'offerta settimanale cheoffre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x25\n· Biglietto per l'Addestramento Identità III x18"
     },
     {
       "id": 151,
       "name": "Pacchetto ESP Mensile I",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità x72\n· Biglietto per Addestramento Identità III x48"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità x72\n· Biglietto per l'Addestramento Identità III x48"
     },
     {
       "id": 152,
       "name": "Pacchetto ESP Mensile II",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x125\n· Biglietto per Addestramento Identità III x72"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x125\n· Biglietto per l'Addestramento Identità III x72"
     },
     {
       "id": 153,
       "name": "Pacchetto ESP Mensile III",
-      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per Addestramento Identità IV x250\n· Biglietto per Addestramento Identità III x144"
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x250\n· Biglietto per l'Addestramento Identità III x144"
     },
     {
       "id": 202,
       "name": "Pacchetto Miglioria\nIdentità Commemorativo\nper la Luna Piena 2024",
-      "desc": "Un pacchetto per festeggiare la Campagna Commemorativa Luna Piena 2024. Contiene i seguenti articoli:\n\n· Modulo Lancio - Legame ID x1\n· Biglietto per Addestramento Identità IV x80\n\n※ Usare il Modulo Lancio - Legame ID su un'Identità porta il suo Legame al Liv.4."
+      "desc": "Un pacchetto per festeggiare la Campagna Commemorativa Luna Piena 2024. Contiene i seguenti articoli:\n\n· Modulo Lancio - Legame ID x1\n· Biglietto per l'Addestramento Identità IV x80\n\n※ Usare il Modulo Lancio - Legame ID su un'Identità porta il suo Legame al Liv.4."
     },
     {
       "id": 203,
@@ -238,12 +238,12 @@
     {
       "id": 204,
       "name": "Pacchetto Miglioria\nCompleto Commemorativo\nper la Luna Piena 2024",
-      "desc": "Un pacchetto per festeggiare la Campagna Commemorativa Luna Piena 2024. Contiene i seguenti articoli:\n\n· Biglietto per Decaestrazione x4\n· Modulo Lancio - Legame ID x1\n· Modulo Lancio - Intreccio E.G.O [WAW] x1\n· Biglietto per Addestramento Identità IV x80\n· Filo x100\n\n※ Usare il Modulo Lancio - Legame ID su un'Identità porta il suo Legame al Liv.4\n\n※ Usare il Modulo Lancio - Intreccio E.G.O [WAW] porta il suo Intreggio al Liv.4 (Si può usare solo su E.G.O di livello WAW o inferiore)"
+      "desc": "Un pacchetto per festeggiare la Campagna Commemorativa Luna Piena 2024. Contiene i seguenti articoli:\n\n· Biglietto per Decaestrazione x4\n· Modulo Lancio - Legame ID x1\n· Modulo Lancio - Intreccio E.G.O [WAW] x1\n· Biglietto per l'Addestramento Identità IV x80\n· Filo x100\n\n※ Usare il Modulo Lancio - Legame ID su un'Identità porta il suo Legame al Liv.4\n\n※ Usare il Modulo Lancio - Intreccio E.G.O [WAW] porta il suo Intreggio al Liv.4 (Si può usare solo su E.G.O di livello WAW o inferiore)"
     },
     {
       "id": 401,
       "name": "Pacchetto Buon Rientro",
-      "desc": "Un pacchetto speciale per i manager che tornano dopo molto tempo. Contiene i seguenti articoli:\n※ Questo pacchetto è disponibile solo per gli utenti ritornati, e può essere acquistato solo durante il periodo dell'evento di ritorno.\n\n· Biglietto per Estrazione x5\n· Biglietto per Addestramento Identità x45\n· Filo x100"
+      "desc": "Un pacchetto speciale per i manager che tornano dopo molto tempo. Contiene i seguenti articoli:\n※ Questo pacchetto è disponibile solo per gli utenti ritornati, e può essere acquistato solo durante il periodo dell'evento di ritorno.\n\n· Biglietto per Estrazione x5\n· Biglietto per l'Addestramento Identità x45\n· Filo x100"
     },
     {
       "id": 402,
@@ -253,7 +253,7 @@
     {
       "id": 403,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo 「Estrazione Mirata - La Manager di La Manchaland Don Quixote」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo 「Estrazione Mirata - La Manager di La Manchaland Don Quixote」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 404,
@@ -273,7 +273,7 @@
     {
       "id": 407,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Quinta Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「La Quinta Notte di Walpurgis」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 408,
@@ -288,7 +288,7 @@
     {
       "id": 410,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Controllo di Routine LCB」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Controllo di Routine LCB」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 411,
@@ -303,12 +303,12 @@
     {
       "id": 413,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedo la Carne per Strappare le Ossa BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Cedo la Carne per Strappare le Ossa BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 414,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Estrazione Mirata Nuova Identità & E.G.O - Associazione Liu Sezione 3 Sud Yi Sang & Thoracalgia Faust」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Estrazione Mirata Nuova Identità & E.G.O - Associazione Liu Sezione 3 Sud Yi Sang & Thoracalgia Faust」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 415,
@@ -323,12 +323,12 @@
     {
       "id": 417,
       "name": "Pacchetto Crescita Identità\nSecondo Anniversario",
-      "desc": "Un pacchetto per celebrare il Secondo Anniversario. Contiene i seguenti articoli:\n\n· Biglietto per Addestramento Identità x125\n· Filo x400"
+      "desc": "Un pacchetto per celebrare il Secondo Anniversario. Contiene i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità x125\n· Filo x400"
     },
     {
       "id": 418,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Associazione Cinq Settore 3 Est Don Quixote & Sopravvissuto dell'Ufficio Firefist Gregor」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Associazione Cinq Settore 3 Est Don Quixote & Sopravvissuto dell'Ufficio Firefist Gregor」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 419,
@@ -338,7 +338,7 @@
     {
       "id": 420,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Spazzare Notturno」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Spazzare Notturno」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 205,
@@ -348,7 +348,7 @@
     {
       "id": 421,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Il Fratellino del Medio Sinclair」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Il Fratellino del Medio Sinclair」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     },
     {
       "id": 422,
@@ -363,7 +363,7 @@
     {
       "id": 424,
       "name": "Pacchetto Crescita Identità",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Renna del 4o Branco di R Corp. Hong Lu」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 50\n· Biglietto per Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Renna del 4o Branco di R Corp. Hong Lu」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 50\n· Biglietto per l'Addestramento Identità III x 20"
     }
   ]
 }
