Schegge, non Scheggie

--- a/Italiano/IAPProduct-a1c7.json
+++ b/Italiano/IAPProduct-a1c7.json
@@ -13,7 +13,7 @@
     {
       "id": 602,
       "name": "Pacchetto Fornitura Stagione 5",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 5. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x60\n· Filo x80\n· [Stagione 5] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 5. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x60\n· Filo x80\n· [Stagione 5] Cassa di ScheggeEgo A Scelta x40"
     }
   ]
 }
