--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -8,7 +8,7 @@
     {
       "id": 604,
       "name": "Pacchetto Fornitura Stagione 6",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x60\n· Biglietto per l'Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 6. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x60\n· Biglietto per l'Addestramento Identità x30\n· Filo x80\n· [Stagione 6] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 425,
