--- a/Italiano/IAPProduct.json
+++ b/Italiano/IAPProduct.json
@@ -103,17 +103,17 @@
     {
       "id": 121,
       "name": "Pacchetto Fornitura Stagione 1",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 1. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità II x40\n· Filo x80\n· [Stagione 1] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 1. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità II x40\n· Filo x80\n· [Stagione 1] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 122,
       "name": "Pacchetto Fornitura Stagione 2",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 2. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 2] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 2. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 2] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 123,
       "name": "Pacchetto Fornitura Stagione 3",
-      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 3. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 3] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante il periodo di orientamento della Stagione 3. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 3] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 131,
@@ -203,7 +203,7 @@
     {
       "id": 125,
       "name": "Pacchetto Fornitura Stagione 4",
-      "desc": "Disponibile per l'acquisto solo durante la Stagione 4. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 4] Cassa di ScheggieEgo A Scelta x40"
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 4. Il pacchetto contiene i seguenti articoli:\n\n· Follia x5040\n· Biglietto per Decaestrazione x3\n· Biglietto di Aumento Livello III x1\n· Biglietto per l'Addestramento Identità III x30\n· Filo x80\n· [Stagione 4] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 150,
