--- a/Italiano/ProjectGSLessonName.json
+++ b/Italiano/ProjectGSLessonName.json
@@ -22,7 +22,7 @@
     },
     {
       "id": 5,
-      "content": "I Miei Racconti Bellici",
+      "content": "Le Mie Storie di Guerra",
       "teacher": "Gregor"
     },
     {
