--- a/Italiano/SeasonTitle.json
+++ b/Italiano/SeasonTitle.json
@@ -75,6 +75,18 @@
     {
       "id": "season_8000_collaboration_filter_title",
       "content": "SOLO COLLABORAZIONE"
+    },
+    {
+      "id": "season_filter_7",
+      "content": "Stagione 7"
+    },
+    {
+      "id": "season_title_7",
+      "content": "Kumo no ito · oti on akA"
+    },
+    {
+      "id": "season_title_7_EVENT",
+      "content": "Kumo no ito · oti on akA [EVENTO]"
     }
   ]
 }
