--- a/Italiano/IAPProduct-a1c9.json
+++ b/Italiano/IAPProduct-a1c9.json
@@ -2,48 +2,48 @@
   "dataList": [
     {
       "id": 605,
-      "name": "Season 7 Commencement Lunacy Pack",
-      "desc": "A Seasonal offer that contains the following:\n\n· Paid Lunacy x1300"
+      "name": "Pacchetto Follia per l'Inizio della Stagione 7",
+      "desc": "Un'offerta Stagionale che offre i seguenti articoli:\n\n· Follia Pagata x1300"
     },
     {
       "id": 606,
-      "name": "Season 7 Settler Supplies",
-      "desc": "Only available for purchase during Season 7. The pack contains the following:\n\n· Paid Lunacy x5040\n· Decaextraction Ticket x3\n· Identity Training Ticket IV x80\n· Identity Training Ticket III x20\n· Thread x80\n· Season 7 Nominable Egoshard Crate x40"
+      "name": "Pacchetto Fornitura Stagione 7",
+      "desc": "Disponibile per l'acquisto solo durante la Stagione 7. Il pacchetto contiene i seguenti articoli:\n\n· Follia Pagata x5040\n· Biglietto per Decaestrazione x3\n· Biglietto per l'Addestramento Identità IV x80\n· Biglietto per l'Addestramento Identità III x20\n· Filo x80\n· [Stagione 7] Cassa di ScheggeEgo A Scelta x40"
     },
     {
       "id": 158,
-      "name": "Weekly EXP Pack",
-      "desc": "A weekly offer that contains the following:\n\n· Identity Training Ticket IV x50\n· Identity Training Ticket III x20"
+      "name": "Pacchetto ESP Settimanale",
+      "desc": "Un'offerta settimanale che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x50\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 159,
-      "name": "Monthly EXP Pack I",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x100\n· Identity Training Ticket III x80"
+      "name": "Pacchetto ESP Mensile I",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x100\n· Biglietto per l'Addestramento Identità III x80"
     },
     {
       "id": 160,
-      "name": "Monthly EXP Pack II",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x210\n· Identity Training Ticket III x72"
+      "name": "Pacchetto ESP Mensile II",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x210\n· Biglietto per l'Addestramento Identità III x72"
     },
     {
       "id": 161,
-      "name": "Monthly EXP Pack III",
-      "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x400\n· Identity Training Ticket III x192"
+      "name": "Pacchetto ESP Mensile III",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Biglietto per l'Addestramento Identità IV x400\n· Biglietto per l'Addestramento Identità III x192"
     },
     {
       "id": 108,
-      "name": "Monthly Training Pack I",
-      "desc": "A monthly offer that contains the following:\n\n· Paid Lunacy x1690\n· Decaextraction Ticket x2\n· Identity Training Ticket IV x50\n· Identity Training Ticket III x20"
+      "name":  "Pacchetto Allenamento Mensile I",
+      "desc": "Un'offerta mensile che offre i seguenti articoli:\n\n· Follia Pagata x1690\n· Biglietto per Decaestrazione x2\n· Biglietto per l'Addestramento Identità IV x50\n· Biglietto per l'Addestramento Identità III x20"
     },
     {
       "id": 460,
-      "name": "Target Extraction Pack",
-      "desc": "You can obtain the following items from this 「New Target Extraction - The Index Proselyte:【Paper Slip】 Faust & LCA Udjat Vanguard Team 3 Leader Outis」 release commemorative Pack.\n\n· Decaextraction Ticket x4"
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Proselito Dell'Indice:【Foglietto】 Faust & Leader del 3o Team di Avanguardia Udjat della LCA Outis」.\n\n· Biglietto per Decaestrazione x4"
     },
     {
       "id": 461,
       "name": "Identity Growth Pack",
-      "desc": "You can obtain the following items from this 「New Target Extraction - The Index Proselyte:【Paper Slip】 Faust & LCA Udjat Vanguard Team 3 Leader Outis」 release commemorative Pack.\n\n· Takeoff Module - ID Uptie x 1\n· Identity Training Ticket IV x 80\n· Identity Training Ticket III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Proselito Dell'Indice:【Foglietto】 Faust & Leader del 3o Team di Avanguardia Udjat della LCA Outis」.\n\n· Takeoff Module - ID Uptie x 1\n· Biglietto per l'Addestramento Identità IV x 80\n· Biglietto per l'Addestramento Identità III x 20"
     }
   ]
 }
