08/01/2026 Update [Canto IX: The Unsevering (Parte 2)]

--- a/Italiano/IAPProduct-a1c9.json
+++ b/Italiano/IAPProduct-a1c9.json
@@ -42,8 +42,18 @@
     },
     {
       "id": 461,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Proselito Dell'Indice:【Foglietto】 Faust & Leader del 3o Team di Avanguardia Udjat della LCA Outis」.\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 80\n· Biglietto per l'Addestramento Identità III x 20"
+    },
+    {
+      "id": 462,
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - @#$# Dell'Indice: 【Device】 Don Quixote」.\n\n· Biglietto per Decaestrazione x 4"
+    },
+    {
+      "id": 463,
       "name": "Identity Growth Pack",
-      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Proselito Dell'Indice:【Foglietto】 Faust & Leader del 3o Team di Avanguardia Udjat della LCA Outis」.\n\n· Takeoff Module - ID Uptie x 1\n· Biglietto per l'Addestramento Identità IV x 80\n· Biglietto per l'Addestramento Identità III x 20"
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - @#$# Dell'Indice: 【Device】 Don Quixote」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per l'Addestramento Identità IV x 80\n· Biglietto per l'Addestramento Identità III x 20"
     }
   ]
 }
